Small changes: * moved open api models to generated sources * changed the api spec for courses list pagination
