# src/main/java/com/freecourses/model/exceptions/CourseNotFoundException.java
@@ -1,16 +1,0 @@
-package com.freecourses.model.exceptions;
-
-import java.util.UUID;
-
-public class CourseNotFoundException extends RuntimeException {
-    private final UUID courseId;
-
-    public CourseNotFoundException(UUID courseId, String message) {
-        super(message);
-        this.courseId = courseId;
-    }
-
-    public UUID getCourseId() {
-        return courseId;
-    }
-}
